# simple-deb

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
simple_deb/: build_deb.py
tests/: test_build_deb.py
